--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Hello World!</h1>
@@ -13,7 +14,7 @@
 
     <script>
       // You can also require other files to run in this process
-      require('./renderer.js')
+      require('./index.js')
     </script>
   </body>
 </html>
