Showing Main Error DailogBox From Index.Js through IPC

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="quote">
-      
-    </div>
+   <h1>IPC </h1>
+
+   <button id="errorBtn">Display Error</button>
 
     <script>
       // You can also require other files to run in this process
