Sending Async Ipc -- It is Default I think

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
    <h1>IPC </h1>
 
-   <button id="errorBtn">Display Error</button>
+   <button id="asyncBtn">Display Error</button>
 
     <script>
       // You can also require other files to run in this process
