Sending Sync ipc call

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <h1>IPC </h1>
 
    <button id="asyncBtn">Display Error</button>
+   <button id="syncBtn">Sync Error</button>
 
     <script>
       // You can also require other files to run in this process
